--- a/force-app/main/default/classes/PerformanceInvoice.cls
+++ b/force-app/main/default/classes/PerformanceInvoice.cls
@@ -2,7 +2,16 @@ public class PerformanceInvoice
 {
     public Opportunity__c opp{get;set;} 
     public contact con{get;set;}
+    
+    public list<contact> conlst{get;set;}
     public Account Acc{get;set;}
+   public contact ShippingContact{get;set;}
+    
+   public list<contact> ShippingCon{get;set;}
+     
+    
+    public Account ShippingAcc{get;set;}
+   
     public Pdf_Header__mdt pdfheader{get;set;}
     public decimal totalCgst{get;set;}
     public decimal totalSgst{get;set;}
@@ -12,6 +21,7 @@ public class PerformanceInvoice
     public decimal totalAmount{get;set;} 
     public decimal totalAmountNotIncludedTax{get;set;} 
     public string totalAmountaftertaxinWords{get;set;}
+    public string sign{get;set;}
     
     public list<Line_item__c> Litem{get;set;}
     
@@ -35,7 +45,9 @@ public class PerformanceInvoice
     public decimal totalAmountSgst{get;set;}
     public decimal totalAmountIgst{get;set;} 
     public decimal totalAmountSumNotIncludedTax{get;set;}
-    
+     public date lcDate{set;get;}
+    public string lcTerm{set;get;}
+   
     public decimal amountTCS{get;set;}
     public decimal totalAmountWithTCS{get;set;}
     
@@ -50,20 +62,49 @@ public class PerformanceInvoice
         
         id queryString = ApexPages.currentPage().getParameters().get('id');
         
-        List<String> pdfheaderField = UtilityClass.getAllFields('Pdf_Header__mdt');
-        String pdfHeaderQuery = 'Select ' +String.Join(pdfheaderField, ',')+ ' From Pdf_Header__mdt Order by Effected_Date__c ASC LIMIT 1';
-        pdfheader =  Database.query(pdfHeaderQuery);
+        
         
         opp=[select Invoice_No__c,Invoice_Date__c,PI_Date__c,PI_Type__c,Reverse_Charges__c,Customer_PO_No__c,PO_Date__c,/*ESN_No1__c,ESN_No1__r.Name
-             ,*/Customer_Asset__c,Customer_Asset__r.name,State__c,Transportation_Mode__c,Transporter_Name__c,Vehicle_Docket_No__c,Quote_Number__c,Quote_Date__c,
-             Date_of_Supply__c,Place_of_Supply__c,Ware_House__c,Payment_Terms__c,Contact_Person__c,OEM_Customer__c,Office__c,Proforma_Invoice__c
-             ,Ware_House__r.city__c,Term_and_Condition__c,OEM_Customer__r.ShippingState  from Opportunity__c where id =:queryString limit 1];  
+             ,*/Customer_Asset__c,Customer_Asset__r.name,State__c,Place_of_supply_formula__c,Transportation_Mode__c,Transporter_Name__c,Vehicle_Docket_No__c,Quote_Number__c,Quote_Date__c,
+             Date_of_Supply__c,Place_of_Supply__c,Shipping_Account__c,Shipping_City__c,Shipping_Country__c,Shipping_Zip_Postal_Code__c,Shipping_State_Province__c,Shipping_Street__c,Ware_House__c,Payment_Terms__c,Contact_Person__c,OEM_Customer__c,Office__c,Proforma_Invoice__c
+             ,Ware_House__r.city__c,Ware_House__r.branch__c,LC_Date__c,LC_Term__c,Term_and_Condition__c,OEM_Customer__r.ShippingState,OwnerId  from Opportunity__c where id =:queryString limit 1];  
+        if(opp.Shipping_Account__c!=null){
+        ShippingCon = [select id,name, phone,MobilePhone, email,isPrimary__c from contact where isPrimary__c= true AND Accountid =:opp.Shipping_Account__c limit 1];
+        if(ShippingCon.size()>0){
+                ShippingContact = ShippingCon[0];
+            }
+        }
         system.debug('opp'+opp.id);
+        system.debug('opp.ShippingStreet'+ opp.Shipping_Street__c);
+        system.debug('opp.Shipping_Zip_Postal_Code__c'+ opp.Shipping_Zip_Postal_Code__c);
+        system.debug('opp.Shipping_State_Province__c'+ opp.Shipping_State_Province__c);
+        system.debug('opp.Shipping_City__c'+ opp.Shipping_City__c);
+        system.debug('opp.Shipping_Country__c'+ opp.Shipping_Country__c);
+        
+        if(opp.LC_Date__c !=null){
+           lcDate= opp.LC_Date__c;
+        }
+        if(opp.LC_Term__c !=null){
+            lcTerm=opp.LC_Term__c;
+        }
+        
+        user ur =[SELECT Id,Branch__c,User_Signature__c from user where id =:opp.OwnerId];
+        if(ur.User_Signature__c!=null)
+        sign = ur.User_Signature__c;
+        system.debug(sign);
+        System.debug('----'+ur.Branch__c);
+        
+        //Pdf header data
+        string branch = opp.Ware_House__r.branch__c;
+        List<String> pdfheaderField = UtilityClass.getAllFields('Pdf_Header__mdt');
+        String pdfHeaderQuery = 'Select ' +String.Join(pdfheaderField, ',')+ ' From Pdf_Header__mdt WHERE Branch__c =:branch Order by Effected_Date__c ASC LIMIT 1';
+        pdfheader =  Database.query(pdfHeaderQuery);
+        
         
         con = [select id,Name,Email,MobilePhone,Accountid from contact where id=:opp.Contact_Person__c limit 1];
         system.debug('contact'+con.id);
         
-        Acc=[select id ,GSTIN_No__c,BillingCity,BillingCountry,BillingState,BillingStreet,BillingAddress,BillingPostalCode,ShippingCountry,
+        Acc=[select id ,TCS_Charges_Enable__c,GSTIN_No__c,BillingCity,BillingCountry,BillingState,BillingStreet,BillingAddress,BillingPostalCode,ShippingCountry,
              ShippingCity,ShippingPostalCode,ShippingStreet,ShippingState,ShippingAddress, name,Billing_State_Code__c,Shipping_State_Code__c from Account where id =:opp.OEM_Customer__c];
         system.debug('Account'+Acc.id);
         
@@ -103,7 +144,7 @@ public class PerformanceInvoice
         strBillingCode = Acc?.Billing_State_Code__c ;
         
         strShippingAddress = '';
-        strShippingAddress = Acc?.ShippingCity;
+        strShippingAddress = Acc?.ShippingStreet;
         if(strShippingAddress != null && strShippingAddress !='' && Acc.ShippingCity != null && Acc.ShippingCity !='')
             strShippingAddress = strShippingAddress+', '+Acc.ShippingCity;
         else if(Acc.ShippingCity != null && Acc.ShippingCity != '')
@@ -208,9 +249,9 @@ public class PerformanceInvoice
         {
             TotalAmountWithCharges = TotalAmountWithCharges+objCharg.Net_Amount__c;
             TotalGSTCharges = TotalGSTCharges+ objCharg?.CGST_Amount__c+objCharg?.SGST_Amount__c+objCharg?.IGST_Amount__c;
-            totalAmountCgst = objCharg?.CGST_Amount__c;
-            totalAmountSgst = objCharg?.SGST_Amount__c;
-            totalAmountIgst = objCharg?.IGST_Amount__c;
+            totalAmountCgst = totalAmountCgst+objCharg?.CGST_Amount__c;
+            totalAmountSgst = totalAmountSgst+objCharg?.SGST_Amount__c;
+            totalAmountIgst = totalAmountIgst+objCharg?.IGST_Amount__c;
             totalAmountSumNotIncludedTax = totalAmountSumNotIncludedTax+objCharg?.Charge_Amount__c;
         }
         totalAmountCgst = totalAmountCgst+totalCgst;
@@ -227,23 +268,26 @@ public class PerformanceInvoice
         TotalAmountWithCharges = TotalAmountWithCharges+totalAmount;
         totalAmountaftertaxinWords = UtilityClass.NoToWord(TotalAmountWithCharges.intValue());
         totalAmountaftertaxinWords = totalAmountaftertaxinWords+' rupees only';
-        TotalAmountWithCharges.round();
+        TotalAmountWithCharges=TotalAmountWithCharges.round();
         totalAmountSumNotIncludedTax = totalAmountSumNotIncludedTax+totalAmountNotIncludedTax;
         totalAmountSumNotIncludedTax.round();
         
         decimal amountTCSPer = 0;
         amountTCS = 0;
-        amountTCS = (TotalAmountWithCharges * decimal.valueof(system.label.TCS_Percentage)).setScale(2);
+        if(Acc.TCS_Charges_Enable__c ==true)
+        {
+        amountTCS = ((TotalAmountWithCharges * decimal.valueof(system.label.TCS_Percentage))/100);
+       // system.debug('...amountTCS....'+amountTCS/100);
         //amountTCS = (TotalAmountWithCharges-amountTCSPer).setScale(2);
-        
-        system.debug(amountTCS+'.....'+amountTCSPer+'....'+TotalAmountWithCharges);
+        amountTCS = amountTCS.setScale(2);
+        system.debug(amountTCS+'....amountTCSPer.'+amountTCSPer+'....'+TotalAmountWithCharges);
         totalAmountWithTCS = 0;
         totalAmountWithTCS = TotalAmountWithCharges +amountTCS;
         totalAmountWithTCS = totalAmountWithTCS.round();
         
         totalAmountaftertaxinWords = UtilityClass.NoToWord(totalAmountWithTCS.intValue());
         totalAmountaftertaxinWords = totalAmountaftertaxinWords+' rupees only';
-        
+        }
         String myGeneratedFileName = opp.Proforma_Invoice__c+'.pdf';
         Apexpages.currentPage().getHeaders().put('content-disposition', 'inline; filename='+myGeneratedFilename);
     }  
