--- a/force-app/main/default/classes/TaxCumServiceInvoicePDF.cls
+++ b/force-app/main/default/classes/TaxCumServiceInvoicePDF.cls
@@ -1,12 +1,18 @@
 public class TaxCumServiceInvoicePDF {
     
     public Invoice__c objInvoice {get;set;}
+    
+    public Contact ShippingObjCon {get;set;}
     //public Account objSupplier {get;set;}
     //public Contact objSupplierContact {get;set;}
     public Bank_Details__mdt objBankDetail{get;set;}
     public List<Invoice_Line_Item__c> lstILI {get;set;}
     public decimal subTotalTaxableAmount{get;set;}
     public decimal subTotalAmount{get;set;}
+    
+    public Pdf_Header__mdt pdfheader{get;set;}
+    public list<Charges__c> lstCharges{get;set;}
+    
     public decimal subTotalQuatity{get;set;}
     public Decimal SubTotalIGST{get;set;}
     public Decimal SubTotalCGST{get;set;}
@@ -24,8 +30,12 @@ public class TaxCumServiceInvoicePDF {
     public Decimal GSTOnReverseCharge{get;set;}
     public Decimal RoundOffValue{get;set;}
     
+    public boolean igstbool {get;set;}
+    public list<taxSummary> taxSummarylist {get;set;}
+    
     public TaxCumServiceInvoicePDF(ApexPages.StandardController controller){
         String strId = ApexPages.currentPage().getParameters().get('id');
+        pdfheader=new Pdf_Header__mdt();
         
         if(String.isNotBlank(strId)){
             objInvoice = new Invoice__c();
@@ -53,12 +63,24 @@ public class TaxCumServiceInvoicePDF {
             List<String> lstInvoiceField = UtilityClass.getAllFields('Invoice__c');
             List<String> lstInvoiceLineItemField = UtilityClass.getAllFields('Invoice_Line_Item__c');
             
-            String strInvoiceQuery = 'Select ' +String.Join(lstInvoiceField, ',')+ ',ESN_No__r.Name,Customer_Name__r.Name, Contact_Person__r.Name, Contact_Person__r.Email, DC_No__r.Delivery_Note_Number__c From Invoice__c where Id =: strId';
-            String strInvoiceLineItemQuery = 'Select ' +String.Join(lstInvoiceLineItemField, ',')+ ',Part_Number__r.Name From Invoice_Line_Item__c where Invoice__c =: strId';            
+            String strInvoiceQuery = 'Select ' +String.Join(lstInvoiceField, ',')+ ',Shipping_Account__r.name,Shipping_Account__r.Shipping_State_Code__c,Shipping_Account__r.Shipping_GSTIN_No__c ,Customer_Name__r.Name,DC_No__r.Sales_Order__r.Ware_House__r.Branch__c,DC_No__r.Sales_Order__r.Ware_House__r.City__c, Contact_Person__r.Name, Contact_Person__r.Email, DC_No__r.Delivery_Note_Number__c From Invoice__c where Id =: strId';
+            String strInvoiceLineItemQuery = 'Select ' +String.Join(lstInvoiceLineItemField, ',')+ ',Part_Number__r.Name,Part_Number__r.Part_Name__c,Part_Number__r.UOM__c From Invoice_Line_Item__c where Invoice__c =: strId';            
             
             List<Invoice__c> lstInvoiceOrder =  Database.query(strInvoiceQuery);
             if(lstInvoiceOrder.size() > 0){
                 objInvoice = lstInvoiceOrder[0];
+                ShippingObjCon = new Contact();
+                
+                list<Contact> listShippingObjCon = new list<Contact>();
+                
+              listShippingObjCon = [select id,name, mobilephone,email,isPrimary__c from contact where isPrimary__c=true AND Accountid =:objInvoice.Shipping_Account__c limit 1];
+                if(listShippingObjCon.size()>0)
+                    ShippingObjCon = listShippingObjCon[0];
+                string branch = objInvoice.DC_No__r.Sales_Order__r.Ware_House__r.Branch__c ;
+            List<String> pdfheaderField = UtilityClass.getAllFields('Pdf_Header__mdt');
+            String pdfHeaderQuery = 'Select ' +String.Join(pdfheaderField, ',')+ ' From Pdf_Header__mdt WHERE Branch__c =:branch Order by Effected_Date__c ASC LIMIT 1';
+            pdfheader =  Database.query(pdfHeaderQuery);
+            
                 /*if(String.isNotEmpty(objInvoice.Supplier__c)){
                     objSupplier = [Select Id,Name, BillingCity,BillingCountry, BillingPostalCode,BillingState,BillingStreet,GSTIN_No__c ,Billing_State_Code__c,
                                    (Select Id, Email, MobilePhone, Name from contacts ) 
@@ -71,7 +93,11 @@ public class TaxCumServiceInvoicePDF {
                 
                     
             }
-             
+            
+               
+            
+            map<decimal,decimal> taxsummaryMap = new map<decimal,decimal>();
+             igstbool=false;
             lstILI = Database.query(strInvoiceLineItemQuery);
             if(lstILI.size() > 0){
                 for(Invoice_Line_Item__c objILI : lstILI){
@@ -91,16 +117,97 @@ public class TaxCumServiceInvoicePDF {
                         CGST = objILI.CGST__c;
                     if(objILI.SGST__c > 0 )
                         SGST = objILI.SGST__c;
-                    if(objILI.IGST__c > 0 )
-                        IGST = objILI.IGST__c;
+                    if(objILI.IGST__c > 0 ){
+                        IGST = objILI.IGST__c;  
+                        igstbool=true;
+                    }
+                      
+                    
+
+                    if(taxsummaryMap.isempty() ){
+                        if((objILI.SGST__c > 0 && !taxsummaryMap.containskey(objILI.SGST__c))){
+                            decimal taxammount =  objILI.Taxable_Amount__c;
+                            taxsummaryMap.put(objILI.SGST__c,taxammount);
+                            system.debug('SGST empty');
+                        }
+                        if((objILI.IGST__c > 0  && !taxsummaryMap.containskey(objILI.IGST__c))){
+                            decimal taxammount =  objILI.Taxable_Amount__c;
+                            taxsummaryMap.put(objILI.IGST__c,taxammount);
+                            system.debug('IGST empty');
+                        }
+                    }
+                    else if((objILI.SGST__c > 0 && !taxsummaryMap.containskey(objILI.SGST__c))){
+                        decimal taxammount =  objILI.Taxable_Amount__c;
+                        taxsummaryMap.put(objILI.SGST__c,taxammount);
+                        system.debug('SGST');
+                    }
+                    else if((objILI.IGST__c > 0  && !taxsummaryMap.containskey(objILI.IGST__c))){
+                        decimal taxammount =  objILI.Taxable_Amount__c;
+                        taxsummaryMap.put(objILI.IGST__c,taxammount);
+                        system.debug('IGST');
+                    }
+                    else{
+                        
+                        if(objILI.SGST__c > 0 ){
+                            decimal taxammount =  taxsummaryMap.get(objILI.SGST__c)+objILI.Taxable_Amount__c;
+                            taxsummaryMap.put(objILI.SGST__c,taxammount);
+                            
+                        }
+                        
+                        system.debug(objILI.IGST__c );
+                        system.debug(taxsummaryMap.get(objILI.IGST__c));
+                        if(objILI.IGST__c > 0 ){
+                            decimal taxammount =  taxsummaryMap.get(objILI.IGST__c)+objILI.Taxable_Amount__c;
+                            taxsummaryMap.put(objILI.IGST__c,taxammount); 
+                            
+                        }
+                        
+                    } 
                 }
                 
+                taxSummarylist = new list<taxSummary>();
+                if(!taxsummaryMap.isempty()){
+                    list<decimal> key = new list<decimal>();
+                    key.addall(taxsummaryMap.keySet());
+                    key.sort();
+                    for(integer i=0;i < key.size();i++)
+                    {
+                        taxSummary ts = new taxSummary();
+                        ts.percentage = key[i];
+                        ts.taxamount = taxsummaryMap.get(ts.percentage);
+                        ts.gstamount = ((ts.percentage*ts.taxamount)/100).setScale(2);
+                        taxSummarylist.add(ts);  
+                    }
+                }
+                system.debug('list size '+taxSummarylist.size());
+                
+                decimal totalAmountCgst = 0;
+                decimal totalAmountSgst = 0;
+                decimal totalAmountIgst = 0;
+                decimal TotalAmountWithCharges = 0;
+                List<String> AllChargesFields = UtilityClass.getAllFields('Charges__c');
+                String ChargesQuery = 'Select ' +String.Join(AllChargesFields, ',')+ ' ,Charges__r.Name From Charges__c where INVOICE__C =: strId';
+                lstCharges = Database.query(ChargesQuery);
+                
                 TotalTaxableAmount = subTotalTaxableAmount;
-                TotalAmount = subTotalAmount;
-                TotalIGST = SubTotalIGST;
-                TotalCGST = SubTotalCGST;
-                TotalSGST = SubTotalSGST;
+                
+                
+                for(Charges__c objCharg : lstCharges)
+                {
+                    TotalTaxableAmount = TotalTaxableAmount+objCharg.Charge_Amount__c;
+                    totalAmountCgst = objCharg.CGST_Amount__c;
+                    totalAmountSgst = objCharg.SGST_Amount__c;
+                    totalAmountIgst = objCharg.IGST_Amount__c;
+                    TotalAmountWithCharges = TotalAmountWithCharges+objCharg.Net_Amount__c;
+                }   
+                
+                
+                
+                TotalIGST = (SubTotalIGST+TotalIGST+ totalAmountIgst).setScale(2);
+                TotalCGST = (SubTotalCGST+totalAmountCgst+TotalCGST).setScale(2);
+                TotalSGST = (SubTotalSGST+totalAmountSgst+TotalSGST).setScale(2);
                 TotalGST = TotalIGST+TotalCGST+TotalSGST;
+                TotalAmount = subTotalAmount+TotalAmountWithCharges;
                 
                 if(subTotalTaxableAmount > 0 )
                     GSTOnReverseCharge = (subTotalTaxableAmount *18 )/100;
@@ -121,6 +228,12 @@ public class TaxCumServiceInvoicePDF {
                 objBankDetail = lstBankDetails[0];
             
         }
-    }   
+    } 
+    
+    public class taxSummary{
+        public  Decimal percentage {get;set;}
+        public  Decimal taxamount {get;set;}
+        public  Decimal gstamount {get;set;}
+    }
     
 }
