--- a/force-app/main/default/classes/InvoiceComponentController.cls
+++ b/force-app/main/default/classes/InvoiceComponentController.cls
@@ -1,103 +1,63 @@
-public class AddproductController {
-    
+public class InvoiceComponentController {
+
     public static WrappMain recordlist {get;set;}
+    
     @AuraEnabled 
     public static string productOnLoad(string RecordId)
     {
+        recordlist = new WrappMain();
         string warehouse = '';
         string warehousename = '';
-        recordlist = new WrappMain();
         Boolean booleantrue = true;
-        string objname =findObjectNameFromRecordIdPrefix(RecordId);
-        Boolean IGST=false;
         Boolean service=false;
+        String state='';
+        Boolean IGST=false;
         list<charges__c> chargeslist = new list<charges__c>();
-        list<Line_Item__c> lineitemonrecord  = new  list<Line_Item__c>();
+        list<TaxDetails> TaxDetailslist = new list<TaxDetails>();
+        list<Invoice_Line_Item__c> lineitemonrecord  = new  list<Invoice_Line_Item__c>();
+        map<id,tax__c> taxmap = new map<id,tax__c>();
         set<string> stateset = new set<string>();
         list<Ware_House__c> whlist=[SELECT State_Code__c,State_Province__c FROM Ware_House__c];
         for(Ware_House__c wh:whlist) stateset.add(wh.State_Code__c);
-        list<TaxDetails> TaxDetailslist = new list<TaxDetails>();
-        Quote__c Quoteobj = new Quote__c();
-        Opportunity__c oppobj = new Opportunity__c();
-        String state='';
-        //Getting line item from current record
-        //Getting State from account  to know IGST will apply or not
-        if(objname  =='Quote__c'){
-            Quoteobj=[SELECT Id,Opportunity__r.stage__c,Customer_Party__r.Billing_State_Code__c,Opportunity__r.Ware_House__r.State_Code__c,Opportunity__r.Office__c,Opportunity__r.Ware_House__c,Opportunity__r.isService__c From Quote__c WHERE id=:RecordId];
-            state=Quoteobj.Customer_Party__r.Billing_State_Code__c;
-            warehouse =Quoteobj.Opportunity__r.Ware_House__c;
-            warehousename=Quoteobj.Opportunity__r.Ware_House__r.State_Code__c;
-            if(Quoteobj.Opportunity__r.stage__c == 'Closed Won'||Quoteobj.Opportunity__r.stage__c == 'Closed Lost'){
-                recordlist.closed =booleantrue;
-            } 
-            service = Quoteobj?.Opportunity__r.isService__c; 
-            lineitemonrecord = [SELECT Amount_Formula__c,Application__c,CGST_Amount_Formula__c,CGST__c,CreatedById,
-                                CreatedDate,Delivery_Date__c,Description__c,DiscountN__c,Discount_Amount__c,Discount__c,
-                                Expected_date__c,HSN_Code__c,Id,IGST_Amount_Formula__c,IGST__c,IsDeleted,LastActivityDate,
-                                LastModifiedById,LastModifiedDate,List_Price__c,Name,Net_Amount__c,Opportunity__c,OwnerId,
-                                Part_Name__c,ProductName__c,Product_Part__c,Quantity__c,Quote__c,Remark__c,Saleable_Stock__c,
-                                Sales_Order__c,Sales_Price__c,SGST_Amount_Formula__c,SGST__c,Specification__c,SystemModstamp,
-                                Taxable_Amount_Formula__c,Total_Amount_Formula__c,Unit_Price__c,Unit__c, Product_Part__r.Part_Name__c,
-                                Product_Part__r.name FROM Line_Item__c where Quote__c =:RecordId];
-            chargeslist =[SELECT CGST__c,Charges__c,Charge_Percentage__c,Charge_Amount__c,CreatedById,CreatedDate,Id,IGST__c,IsDeleted,LastModifiedById,
-                          LastModifiedDate,MRN__c,Name,Net_Amount__c,Opportunity__c,OwnerId,Quote__c,SGST__c,SystemModstamp,Total_Amount__c,
-                          Charges__r.name FROM Charges__c Where Quote__c =:RecordId ];
-        }
-        if(objname  =='Opportunity__c'){
-            oppobj=[SELECT Id,OEM_Customer__r.Billing_State_Code__c,Ware_House__c,stage__c, Ware_House__r.State_Code__c, Office__c,isService__c From Opportunity__c WHERE id=:RecordId];
-            state=oppobj.OEM_Customer__r.Billing_State_Code__c;
-            System.debug('BillingStateCodeOnOpportunity----- '+state);
-            warehouse =oppobj.Ware_House__c;
-            service = oppobj?.isService__c; 
-            System.debug('warehouse----- '+warehouse);
-            warehousename=oppobj.Ware_House__r.State_Code__c;
-            if(oppobj.stage__c == 'Closed Won'||oppobj.stage__c == 'Closed Lost'){
-                recordlist.closed =booleantrue;
-            } 
-            lineitemonrecord = [SELECT Amount_Formula__c,Application__c,CGST_Amount_Formula__c,CGST__c,CreatedById,
-                                CreatedDate,Delivery_Date__c,Description__c,DiscountN__c,Discount_Amount__c,Discount__c,
-                                Expected_date__c,HSN_Code__c,Id,IGST_Amount_Formula__c,IGST__c,IsDeleted,LastActivityDate,
-                                LastModifiedById,LastModifiedDate,List_Price__c,Name,Net_Amount__c,Opportunity__c,OwnerId,
-                                Part_Name__c,ProductName__c,Product_Part__c,Quantity__c,Quote__c,Remark__c,Saleable_Stock__c,
-                                Sales_Order__c,Sales_Price__c,SGST_Amount_Formula__c,SGST__c,Specification__c,SystemModstamp,
-                                Taxable_Amount_Formula__c,Total_Amount_Formula__c,Unit__c,Product_Part__r.Part_Name__c,
-                                Product_Part__r.name FROM Line_Item__c where Opportunity__c =:RecordId];
-            chargeslist =[SELECT CGST__c,Charges__c,Charge_Percentage__c,Charge_Amount__c,CreatedById,CreatedDate,Id,IGST__c,IsDeleted,LastModifiedById,
-                          LastModifiedDate,MRN__c,Name,Net_Amount__c,Opportunity__c,OwnerId,Quote__c,SGST__c,SystemModstamp,Total_Amount__c,
-                          Charges__r.name FROM Charges__c Where Opportunity__c =:RecordId ];
-            
-        }
-        list<tax__c> taxlist =[SELECT Basic_Percentage__c,CreatedById,CreatedDate,Id,IsDeleted,LastActivityDate,LastModifiedById,LastModifiedDate,
-                               LastReferencedDate,LastViewedDate,Name,OwnerId,SystemModstamp,Tax_Percentage__c FROM Tax__c];
-        map<id,tax__c> taxmap = new map<id,tax__c>();
-        if(!taxlist.isEmpty())taxmap.putall(taxlist);
         
-        if(!String.isblank(state) && !String.isblank(warehouse) ){
+        List<String> lstInvoiceField = UtilityClass.getAllFields('Invoice__c');
+        List<String> lstInvoiceItemField = UtilityClass.getAllFields('Invoice_Line_Item__c');
+        List<String> lstChargesField = UtilityClass.getAllFields('Charges__c');
+        List<String> lstTaxField = UtilityClass.getAllFields('tax__c');
+        String strInvoiceQuery = 'Select ' +String.Join(lstInvoiceField, ',')+' ,DC_No__r.Sales_Order__r.Opportunity__r.isService__c,  Place_of_Supply__r.State_Code__c, Customer_Name__r.Billing_State_Code__c  From Invoice__c where Id =: RecordId';
+        String strInvoiceItemQuery = 'Select ' +String.Join(lstInvoiceItemField, ',')+ ' ,Part_Number__r.List_Price_Standard_price__c,Part_Number__r.name, Part_Number__r.Part_Name__c FROM Invoice_Line_Item__c where Invoice__c =: RecordId';
+        String strChargesQuery = 'Select ' +String.Join(lstChargesField, ',')+ ' ,Charges__r.Name From Charges__c where Invoice__c =: RecordId';
+        String strTaxQuery = 'Select ' +String.Join(lstTaxField, ',')+ ' From tax__c';
+        
+        Invoice__c InvoiceRecord = Database.query(strInvoiceQuery);
+        state =InvoiceRecord.Customer_Name__r.Billing_State_Code__c;
+        warehouse =InvoiceRecord.Place_of_Supply__c;
+        warehousename=InvoiceRecord.Place_of_Supply__r.State_Code__c;
+        service = InvoiceRecord.DC_No__r.Sales_Order__r.Opportunity__r.isService__c;
+        if(InvoiceRecord.Status__c=='Approved'){
+                recordlist.closed =booleantrue;
+            } 
+        lineitemonrecord = Database.query(strInvoiceItemQuery);
+        chargeslist =  Database.query(strChargesQuery);
+        list<tax__c> taxlist = Database.query(strTaxQuery);
+        
+        
+        if(!taxlist.isEmpty())taxmap.putall(taxlist);
+        if(!String.isblank(state)){
             recordlist.statecode = true;
-            
             if(!chargeslist.isEmpty()){
                 for(Charges__c ch:chargeslist){
                     TaxDetails objTD = new TaxDetails();
                     objTD.objTax = taxmap.get(ch.Charges__c);
                     objTD.strTaxId = ch.Charges__c;
                     objTD.strTaxName = ch.Charges__r.Name;
-                    String decstr = string.valueof(ch.Charge_Percentage__c);
-                    String nstr='';
-                    if(decstr.contains('.')){
-                       integer pos = decstr.indexOf('.');
-                       nstr=decstr.substring(0, pos+2);
-                    }
-                     //objTD.TaxPercentage = Decimal.valueof(nstr);
                     objTD.TaxPercentage = ch.Charge_Percentage__c.setscale(2);
-                    
                     objTD.CGST = ch.CGST__c ;
                     objTD.SGST = ch.SGST__c;
                     objTD.IGST = ch.IGST__c;
                     objTD.objcharge = ch;
-                    objTD.decTaxAmount =  ch.Charge_Amount__c;
-                    system.debug('-- '+ch.Total_Amount__c);
+                    objTD.decTaxAmount =  ch.Total_Amount__c;
                     objTD.NetAmount =  ch.Net_Amount__c;
-                    system.debug('-- '+ch.Net_Amount__c);
                         objTD.ischargeItem = booleantrue;
                     TaxDetailslist.add(objTD);
                 } 
@@ -106,41 +66,55 @@ public class AddproductController {
             // 
             set<string> partidset = new set<string>();
             if(!lineitemonrecord.isempty()){
-                for(Line_Item__c objOppPro:lineitemonrecord){
-                    partidset.add(objOppPro.Product_Part__c);
+                for(Invoice_Line_Item__c objOppPro:lineitemonrecord){
+                    partidset.add(objOppPro.Part_Number__c);
                 }
             }
-            list<Stock__c> stlist = [SELECT Id, Total_Quantity__c, Ware_House__r.City__c, Ware_House__r.State_Code__c,Product_Part__c,Total_Unbooked_Quantity__c from Stock__c WHERE Product_Part__c IN:partidset and Ware_House__c =:warehouse];
+            list<Stock__c> stlist = [SELECT Id, Total_Quantity__c, Ware_House__r.City__c, Ware_House__r.State_Code__c,Product_Part__c,Total_Unbooked_Quantity__c,Freeze_Quantity__c from Stock__c WHERE Product_Part__c IN:partidset and Ware_House__c =:warehouse];
             map<string,decimal> stcountmap = new map<string,decimal>();
+            map<string,stockwrap> stwraptmap = new map<string,stockwrap>();
+            
             for(Stock__c st:stlist){
+                stockwrap stw = new stockwrap();
+                stw.stockamount = st.Total_Quantity__c;
+                stw.saleableamount = st.Total_Unbooked_Quantity__c;
+                if(st.Freeze_Quantity__c!=null){
+                  stw.freezeamount = st.Freeze_Quantity__c;  
+                }
+                else{
+                    stw.freezeamount = 0;
+                }
+                
                 stcountmap.put(st.Product_Part__c,st.Total_Unbooked_Quantity__c);
+                stwraptmap.put(st.Product_Part__c,stw);
             }
             // 
             list<prodwrappChild> lineitemlist = new list<prodwrappChild>();
             if(!lineitemonrecord.isempty()){
-                for(Line_Item__c objOppPro:lineitemonrecord){
+                for(Invoice_Line_Item__c objOppPro:lineitemonrecord){
                     prodwrappChild objchild = new prodwrappChild();
-                    objchild.DiscountAmount=objOppPro.Discount_Amount__c; 
-                    objchild.totalAmount =objOppPro.Total_Amount_Formula__c ;
-                    objchild.TotalAfterDiscount =objOppPro.Taxable_Amount_Formula__c ;
+                    objchild.DiscountAmount=0; 
+                    objchild.totalAmount =objOppPro.Amount__c ;
+                    objchild.TotalAfterDiscount =objOppPro.Taxable_Amount__c ;
                     objOppPro.SGST__c=objOppPro.SGST__c ;
                     objOppPro.CGST__c=objOppPro.CGST__c ;  
                     objOppPro.IGST__c=objOppPro.IGST__c ;
-                    objchild.CGSTAmount=objOppPro.CGST_Amount_Formula__c ;
-                    objchild.SGSTAmount=objOppPro.SGST_Amount_Formula__c ;
-                    objchild.IGSTAmount=objOppPro.IGST_Amount_Formula__c ; 
+                    objchild.CGSTAmount=objOppPro.CGST_Amount__c ;
+                    objchild.SGSTAmount=objOppPro.SGST_Amount__c ;
+                    objchild.IGSTAmount=objOppPro.IGST_Amount__c ; 
                     objchild.NetTotalAmount = objOppPro.Net_Amount__c ;
                     objchild.objProdchild = objOppPro;
-                    objchild.PartName = objOppPro.Product_Part__r.Part_Name__c ;
-                    objchild.Partnumber= objOppPro.Product_Part__r.name ;
+                    objchild.PartName = objOppPro.Part_Number__r.Part_Name__c ;
+                    objchild.Partnumber= objOppPro.Part_Number__r.name ;
                     objchild.isSelected = booleantrue;
                     objchild.isLineItem = booleantrue;
-                    objchild.stockamount = stcountmap.get(objOppPro.Product_Part__c);
+                   // objchild.stockamount = stcountmap.get(objOppPro.Product_Part__c);
+                    objchild.stockamount = stwraptmap.get(objOppPro.Part_Number__c).stockamount;
+                    objchild.saleableamount = stwraptmap.get(objOppPro.Part_Number__c).saleableamount;
+                    objchild.POamount = stwraptmap.get(objOppPro.Part_Number__c).freezeamount;
                     lineitemlist.add(objchild);
                 }
-            }
-           
-            
+            }            
             if(!stateset.contains(state)) IGST=true;
             
             recordlist.lstWrapp = new list<prodwrapp>(); 
@@ -153,12 +127,11 @@ public class AddproductController {
             recordlist.isSelectedProduct = false;
             recordlist.quoteId.add(RecordId);
             recordlist.igstvalue=IGST;
+            recordlist.isService =service;
             recordlist.success = true;
             recordlist.lstTaxType = new list<TaxType>();
             recordlist.lstTaxDetails = new List<TaxDetails>();
             recordlist.lstCharges = new List<TaxDetails>();
-            recordlist.wrname = warehousename;
-            recordlist.isService = service;
             for(Tax__c objTax : [Select Id,Name,Tax_Percentage__c,Basic_Percentage__c,CGST__c,SGST__c,IGST__c from Tax__c]){
                 TaxType objTaxT = new TaxType();
                 objTaxT.value = objTax.Name;
@@ -180,7 +153,6 @@ public class AddproductController {
                     objTD.SGST = objTax.SGST__c;
                     objTD.IGST = 0;  
                 }
-                
                 objTD.NetAmount =0.00;
                 recordlist.lstTaxDetails.add(objTD);
             }
@@ -190,58 +162,36 @@ public class AddproductController {
         }
         system.debug('....recordlist...'+recordlist);
         return json.serialize(recordlist);
-    } 
-    
+    }
     @AuraEnabled
     public static String getSearchProduct(string objectName, string queryText,String objwrap,String recordId)
     {
-        Set<id> wrapproductId = New Set<Id>();
-        
+        Set<id> wrapproductId = New Set<Id>(); 
         System.debug('recordId');
         WrappMain oldwrap = new WrappMain();
-        
-        
         oldwrap = (WrappMain)Json.deserialize(objwrap, WrappMain.class);
         System.debug('oldwrap.lstWrapp '+oldwrap.lstWrappTwo);
         if(oldwrap.lstWrappTwo != null){
             for(prodwrappChild prdwrp : oldwrap.lstWrappTwo){
-                System.debug('prdwrp.isSelected'+prdwrp.isSelected);
                 if(prdwrp.isSelected = true){
-                    wrapproductId.add(prdwrp.objProdchild.Product_Part__c);
+                    wrapproductId.add(prdwrp.objProdchild.Part_Number__c);
                 }
             }
         }
-        string objname =findObjectNameFromRecordIdPrefix(recordId);
-        system.debug('recordId '+recordId);
-        system.debug('obj '+objname);
         list<prodwrappChild> prodwrap = new list<prodwrappChild>();
-        String lineitemquery = 'SELECT Application__c,CGST_Amount_Formula__c,CGST__c,Delivery_Date__c,HSN_Code__c,Id,';
-        lineitemquery = lineitemquery + 'IGST_Amount_Formula__c,IGST__c,List_Price__c,Name,Net_Amount__c,';
-        lineitemquery = lineitemquery + ' Opportunity__c,Product_Part__c,Quantity__c,Quote__c,';
-        lineitemquery = lineitemquery + 'Remark__c,Saleable_Stock__c,Sales_Price__c,SGST_Amount_Formula__c,';
-        lineitemquery = lineitemquery + 'SGST__c,Specification__c,Taxable_Amount_Formula__c,Total_Amount_Formula__c,';
-        if(objname == 'Quote__c'){
-            lineitemquery = lineitemquery + 'Unit__c FROM Line_Item__c Where  Quote__c =:  recordId';
-            
-        }
-        else if(objname == 'Opportunity__c'){
-            lineitemquery = lineitemquery + 'Unit__c FROM Line_Item__c Where  Opportunity__c =: recordId' ;
-        }
+        List<Sales_Order_Line_Item__c> prelineitemrecord = [SELECT Amount__c,CGST__c,CreatedById,CreatedDate,Description__c,
+                                                            Discount_Amount__c,Discount__c,Expected_Date__c,GST__c,HSN_Code__c,Id,IGST__c,Name,OwnerId,
+                                                            Product_Part__c,Quantity__c,Sales_Order__c,SGST__c,Taxable_Amount__c,Total_Amount__c,
+                                                            Unit_Price__c,Product_Part__r.name,Unit__c FROM Sales_Order_Line_Item__c Where  Sales_Order__c = :recordId];
         
-        List<Line_Item__c> prelineitemrecord = database.query(lineitemquery);
         Set<id> lineitemset = New Set<Id>();
         if(!prelineitemrecord.isEmpty()){
-            System.debug('Lineitem available');
-            
-            for(Line_Item__c lnt : prelineitemrecord )
+            for(Sales_Order_Line_Item__c lnt : prelineitemrecord )
             {
                 lineitemset.add(lnt.Product_Part__c);
                 wrapproductId.add(lnt.Product_Part__c); 
             }
-            
-            
         } 
-        
         recordlist = new WrappMain();
         recordlist.lstWrapp = new list<prodwrapp>();
         list<prodwrapp> listproduct= new list<prodwrapp>();
@@ -262,7 +212,7 @@ public class AddproductController {
             }
             System.debug('setProductId---- '+setProductId);
             /* Adding the object and filter by name to the soql */
-            string soql = 'select ' + string.join(leadfieldNames, ', ') +',(SELECT Id,Product_Part__c, Total_Quantity__c, Ware_House__r.City__c,Total_Unbooked_Quantity__c from Stocks__r) from ' + objectName ; 
+            string soql = 'select ' + string.join(leadfieldNames, ', ') +',(SELECT Id, Total_Quantity__c, Ware_House__r.City__c,Total_Unbooked_Quantity__c from Stocks__r) from ' + objectName ; 
             system.debug('......'+soql);
             if(filter.trim() != ''){
                 
@@ -289,7 +239,6 @@ public class AddproductController {
                         
                     }
                 }
-                
                 prdwrap.isSelected = false; 
                 listproduct.add(prdwrap);
             }
@@ -298,7 +247,7 @@ public class AddproductController {
             } 
             
             if(wrapproductId.size() > 0 ){
-                string soql2 = 'select ' + string.join(leadfieldNames, ',') +',(SELECT Id,Product_Part__c, Total_Quantity__c, Ware_House__r.City__c,Total_Unbooked_Quantity__c from Stocks__r) from ' + objectName ; 
+                string soql2 = 'select ' + string.join(leadfieldNames, ',') +',(SELECT Id, Total_Quantity__c, Ware_House__r.City__c,Total_Unbooked_Quantity__c from Stocks__r)  from ' + objectName ; 
                 if(filter.trim() != ''){    
                     soql2 += ' where id IN : wrapproductId and ( name Like ' + filter + ' or Part_Name__c LIKE ' + filter + ')';
                 } 
@@ -320,6 +269,10 @@ public class AddproductController {
                     prdwrap.isSelected = true; 
                     listproduct.add(prdwrap);
                 }}
+            
+            
+            
+            
             set<string> partid = new set<string>();
             for(prodwrapp pd:listproduct){
                 partid.add(pd.objProd.id);
@@ -368,7 +321,7 @@ public class AddproductController {
         WrappMain objwrap = (WrappMain)Json.deserialize(strWrap, WrappMain.class);
         try
         { 
-            for(Part__c objP : [select id, name, List_Price_Standard_price__c, Product_Family__c,GST__c,Service_Price__c,(SELECT Id,Total_Quantity__c,Ware_House__r.city__c FROM Stocks__r ) from Part__c limit 10]) 
+            for(Part__c objP : [select id, name, List_Price_Standard_price__c, Product_Family__c,GST__c,Service_Price__c from Part__c limit 10]) 
             {
                 prodwrapp objwrapp = new prodwrapp(); 
                 objwrapp.objProd = objP;
@@ -398,7 +351,8 @@ public class AddproductController {
         integer i=0;
         integer x=0;
         for(prodwrappChild prodchild : lstWrapplineItem){
-            if(prodchild.objProdchild.Product_Part__c == prodwrappobj.objProd.id){
+            x++;
+            if(prodchild.objProdchild.Part_Number__c == prodwrappobj.objProd.id){
                 i=lstWrapplineItem.indexOf(prodchild);
                 System.debug('integer i '+i);
             }           
@@ -424,137 +378,22 @@ public class AddproductController {
     }
     
     @AuraEnabled
-    public static string addRecord(string strWrap)
-    {
-        System.debug('add Record method called');
-        WrappMain objwrap = (WrappMain)Json.deserialize(strWrap, WrappMain.class);
-        try
-        {
-            List<prodwrapp> lstWrappNew = objwrap.lstWrapp;
-            List<prodwrappChild> lstWrappTwoNew = new List<prodwrappChild>();
-            Set<id> lineitemids = new set<id>();
-            System.debug('lstWrappNewSz---- '+lstWrappNew.size());
-            for( integer i = 0 ; i<lstWrappNew.size();  i++)
-            {
-                if(lstWrappNew[i].isSelected)
-                {
-                    prodwrappChild objchild = new prodwrappChild();
-                    objchild.isSelected = true;
-                    Line_Item__c objOppPro = new Line_Item__c();
-                    if(objwrap?.isService){
-                        objOppPro.List_Price__c = lstWrappNew[i].objProd.Service_Price__c;
-                    objOppPro.Sales_Price__c = lstWrappNew[i].objProd.Service_Price__c;
-                    }
-                    else{
-                      objOppPro.List_Price__c = lstWrappNew[i].objProd.List_Price_Standard_price__c;
-                    objOppPro.Sales_Price__c = lstWrappNew[i].objProd.List_Price_Standard_price__c;  
-                    }
-                    
-                    objOppPro.Quantity__c = 1;
-                    objOppPro.HSN_Code__c = lstWrappNew[i].objProd.HSN_CODE__c;
-                    objOppPro.Product_Part__c = lstWrappNew[i].objProd.id; 
-                    objOppPro.Discount__c=0;
-                    objchild.DiscountAmount=0; 
-                    objchild.totalAmount = Integer.valueOf(objOppPro.Quantity__c*objOppPro.Sales_Price__c);
-                    System.debug('totalAmount----- '+objchild.totalAmount);
-                    objchild.TotalAfterDiscount = Integer.valueOf(objOppPro.Quantity__c*objOppPro.Sales_Price__c);
-                    System.debug('TotalAfterDiscount----- '+objchild.TotalAfterDiscount);
-                    
-                    if(objwrap.igstvalue){
-                        objOppPro.SGST__c=0;
-                        objOppPro.CGST__c=0;
-                        if(lstWrappNew[i].objProd.GST__c != null) objOppPro.IGST__c= lstWrappNew[i].objProd.GST__c;
-                        if(lstWrappNew[i].objProd.GST__c == null) objOppPro.IGST__c= 0;
-                    }
-                    else{
-                        if(lstWrappNew[i].objProd.GST__c != null)  objOppPro.SGST__c=(lstWrappNew[i].objProd.GST__c)/2;
-                        if(lstWrappNew[i].objProd.GST__c != null)  objOppPro.CGST__c=(lstWrappNew[i].objProd.GST__c)/2;
-                        if(lstWrappNew[i].objProd.GST__c == null)  objOppPro.SGST__c=0;
-                        if(lstWrappNew[i].objProd.GST__c == null)  objOppPro.CGST__c=0;
-                        objOppPro.IGST__c=0;
-                    }
-                    objchild.CGSTAmount=(Integer.valueOf(objOppPro.Quantity__c*objOppPro.Sales_Price__c)*objOppPro.CGST__c)/100;
-                    objchild.SGSTAmount=(Integer.valueOf(objOppPro.Quantity__c*objOppPro.Sales_Price__c)*objOppPro.SGST__c)/100;
-                    objchild.IGSTAmount=(Integer.valueOf(objOppPro.Quantity__c*objOppPro.Sales_Price__c)*objOppPro.IGST__c)/100; 
-                    objchild.NetTotalAmount = Integer.valueOf(objOppPro.Quantity__c*objOppPro.Sales_Price__c)+objchild.CGSTAmount+objchild.SGSTAmount+objchild.IGSTAmount;
-                    objchild.objProdchild = objOppPro;
-                    objchild.PartName = lstWrappNew[i].objProd.Part_Name__c;
-                    objchild.Partnumber= lstWrappNew[i].objProd.name;
-                    if(objwrap.wrname == '06'){
-                        objchild.stockamount = lstWrappNew[i].GrWr;
-                    }
-                    if(objwrap.wrname == '19'){
-                        objchild.stockamount = lstWrappNew[i].Klwr;
-                    }
-                    System.debug('-idset---'+objwrap.lineitemid);
-                    if(objwrap.lineitemid == null)
-                    {
-                        System.debug('If ProductId---- '+objwrap.lineitemid);
-                        lstWrappTwoNew.add(objchild);
-                        lineitemids.add(objOppPro.Product_Part__c);  
-                        objwrap.lineitemid = lineitemids;
-                        System.debug('If Complete--- ');
-                        System.debug('contain1 list---- '+objwrap.lineitemid);
-                    }
-                    else
-                    {
-                        System.debug('else ProductId---- '+objOppPro.Product_Part__c);
-                        if(objwrap.lineitemid.contains(objOppPro.Product_Part__c) == False)
-                        {
-                            lstWrappTwoNew.add(objchild); 
-                            lineitemids.add(objOppPro.Product_Part__c);  
-                            objwrap.lineitemid.addall(lineitemids);
-                            System.debug('contain2 list---- '+objwrap.lineitemid);
-                        }                   
-                    }
-                    System.debug('After---- '+lstWrappTwoNew);   
-                }
-            }
-            objwrap.success = true;
-            if(objwrap.lstWrappTwo == null)
-            {
-                objwrap.lstWrappTwo = lstWrappTwoNew;
-                objwrap.isSelectedProduct =true;
-                System.debug('Null Add list---- ');
-            }
-            else
-            {
-                objwrap.lstWrappTwo.addall(lstWrappTwoNew);
-                objwrap.isSelectedProduct =true;
-                System.debug('merge list---- ');
-            }    
-        }
-        catch(exception e)
-        {
-            objwrap.success = false;
-            objwrap.strMessage = e.getMessage();
-        }
-        system.debug('..........'+json.serialize(objwrap));
-        return json.serialize(objwrap); 
-    }   
-    
-    @AuraEnabled
     public static string saveRecord(string strWrap, string RecordId,string lstCharges, Decimal decTotalAmount)
     {
-        System.debug('---------'+lstCharges);
         system.debug('Save method called'+'quoteId----- '+RecordId);
-        string objname =findObjectNameFromRecordIdPrefix(RecordId);
+
         WrappMain objwrap = (WrappMain)Json.deserialize(strWrap, WrappMain.class);
         List<TaxDetails> lstTaxDetails = (List<TaxDetails>)Json.deserialize(lstCharges, List<TaxDetails>.Class);
         try
         {
             List<prodwrappChild> OppLineChild = objwrap.lstWrappTwo;
-            List<Line_Item__c> insertOppProduct = new List<Line_Item__c>();
+            List<Invoice_Line_Item__c> insertOppProduct = new List<Invoice_Line_Item__c>();
             for(prodwrappChild obj : OppLineChild)
             {
-                Line_Item__c objOppProduct = obj.objProdchild;
-                if(objOppProduct.Quantity__c > 0 && objOppProduct.Sales_Price__c >0)
+                Invoice_Line_Item__c objOppProduct = obj.objProdchild;
+                if(objOppProduct.Quantity__c > 0 && objOppProduct.Unit_Price__c >0)
                 {
-                    if(objname  =='Quote__c')
-                        objOppProduct.Quote__c = RecordId;
-                    if(objname  =='Opportunity__c')
-                        objOppProduct.Opportunity__c = RecordId;
-                    System.debug('productsId---- '+objOppProduct.Quote__c);
+                    objOppProduct.invoice__c = RecordId;
                     insertOppProduct.add(objOppProduct);
                 }
             }
@@ -566,6 +405,7 @@ public class AddproductController {
                 database.upsert(insertOppProduct,false);
                 objwrap.strMessage = system.label.Add_Product_Success_Msg;
             }
+            
             System.debug('lstTaxDetails---- '+lstTaxDetails.size());
             List<Charges__c> lstCharge = new List<Charges__c>();
             if(!lstTaxDetails.isempty()){
@@ -578,8 +418,7 @@ public class AddproductController {
                     objCharges.IGST__c =td.IGST ;
                     objCharges.SGST__c =td.SGST ;
                     objCharges.CGST__c =td.CGST ;
-                    if(objname  =='Quote__c') objCharges.Quote__c = RecordId;
-                   if(objname  =='Opportunity__c')objCharges.Opportunity__c = RecordId; 
+                    objCharges.invoice__c=RecordId;
                     lstCharge.add(objCharges);                   
                     system.debug(td.strTaxName+'...strTaxName....'+td.TaxPercentage);
                 }
@@ -593,20 +432,8 @@ public class AddproductController {
         }
         
         return json.serialize(objwrap);
-    }
-    
-     @AuraEnabled
-    public static string deleteRecord(string strWrap)
-    {      
-        prodwrappChild objwrap = (prodwrappChild)Json.deserialize(strWrap, prodwrappChild.class);
-        try{
-           Delete objwrap.objProdchild;
-        }
-         catch(exception ex){
-                system.debug('error---------------------'+ex.getMessage());
-            }
-        return null;
-    }
+    }  
+
     
      @AuraEnabled
     public static string deltecharges(string strWrap)
@@ -620,46 +447,21 @@ public class AddproductController {
             }
         return null;
     }
-    //This Method get object name base of recordid
-    public static String findObjectNameFromRecordIdPrefix(String recordIdOrPrefix){
-        String objectName = '';
-        try{
-            //Get prefix from record ID
-            //This assumes that you have passed at least 3 characters
-            String myIdPrefix = String.valueOf(recordIdOrPrefix).substring(0,3);
-            
-            //Get schema information
-            Map<String, Schema.SObjectType> gd =  Schema.getGlobalDescribe(); 
-            
-            //Loop through all the sObject types returned by Schema
-            for(Schema.SObjectType stype : gd.values()){   
-                Schema.DescribeSObjectResult r = stype.getDescribe();
-                String prefix = r.getKeyPrefix();         
-                //Check if the prefix matches with requested prefix
-                if(prefix!=null && prefix.equals(myIdPrefix)){
-                    objectName = r.getName();    
-                    break;
-                }
-            }
-        }catch(Exception e){
-            System.debug(e);
-        }
-        return objectName;
-    }
+        
     
     public class WrappMain
     {    
         @AuraEnabled public list<prodwrapp> lstWrapp {get;set;}
         @AuraEnabled public list<prodwrappChild> lstWrappTwo {get;set;}
-        @AuraEnabled public list<prodwrappChild> Lineitemonrecord {get;set;}
         @AuraEnabled public set<Id> lineitemid {get;set;}
         @AuraEnabled public set<Id> quoteId {get;set;}
         @AuraEnabled public Boolean isSelectedProduct {get; set;}
         @AuraEnabled public boolean igstvalue {get;set;} 
         @AuraEnabled public string objectname {get;set;}
-        @AuraEnabled public boolean success;    
-        @AuraEnabled public boolean statecode;
+        @AuraEnabled public boolean success;
         @AuraEnabled public string strMessage;
+        @AuraEnabled public list<prodwrappChild> Lineitemonrecord {get;set;}
+        @AuraEnabled public boolean statecode;
         @AuraEnabled public list<TaxType> lstTaxType;
         @AuraEnabled public list<TaxDetails> lstTaxDetails;
         @AuraEnabled public list<TaxDetails> lstTaxDetailsAvailable;
@@ -672,15 +474,14 @@ public class AddproductController {
     public class prodwrapp
     {    
         @AuraEnabled public Part__c objProd{get;set;}
+        @AuraEnabled public Boolean isSelected {get; set;}
         @AuraEnabled public Integer Klwr {get;set;}
         @AuraEnabled public Integer GrWr {get;set;}
-        @AuraEnabled public Boolean isSelected {get; set;}
         @AuraEnabled public string oldPartName {get; set;}
     }
     public class prodwrappChild
     {
-        // public Deal_Product__c objProdchild{get;set;}
-        @AuraEnabled public Line_Item__c objProdchild{get;set;}
+        @AuraEnabled public Invoice_Line_Item__c objProdchild{get;set;}
         @AuraEnabled public decimal  totalAmount{get;set;}
         @AuraEnabled public decimal  DiscountAmount{get;set;}
         @AuraEnabled public decimal  TotalAfterDiscount{get;set;}
@@ -689,11 +490,19 @@ public class AddproductController {
         @AuraEnabled public decimal  IGSTAmount{get;set;}
         @AuraEnabled public decimal  NetTotalAmount{get;set;}
         @AuraEnabled public Boolean isSelected {get; set;}
-        @AuraEnabled public Boolean isLineItem {get; set;}
-        @AuraEnabled public String Partnumber {get; set;}
+         @AuraEnabled public String Partnumber {get; set;}
         @AuraEnabled public String PartName {get; set;}
+         @AuraEnabled public Boolean isLineItem {get; set;}
+        @AuraEnabled public decimal  saleableamount{get;set;}
         @AuraEnabled public decimal  stockamount{get;set;}
+        @AuraEnabled public decimal  POamount{get;set;}
         
+    }
+    
+     public class stockwrap{
+        @AuraEnabled public decimal stockamount;
+        @AuraEnabled public decimal saleableamount;
+         @AuraEnabled public decimal freezeamount;
     }
     public class TaxType{
         @AuraEnabled public string id;
@@ -714,7 +523,5 @@ public class AddproductController {
         
     }
     
-    
-    
-    
+
 }
